--- a/jupyter_notebooks/naive_bayes.ipynb
+++ b/jupyter_notebooks/naive_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# all NB classifiers trained at the same time\n",
@@ -13,15 +13,12 @@
     "    process_naive_bayes_CNB(data_tuple)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# methods for training a single NB classifier\n",
@@ -104,15 +101,12 @@
     "    print(\"\\n\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# methods for evaluating best performing classifiers\n",
@@ -151,13 +145,28 @@
     "    print(\"Bernoulli Naive Bayes:\")\n",
     "    print(\"Accuracy:\",metrics.accuracy_score(target_test, target_pred))\n",
     "    print(\"F2-Score:\",metrics.fbeta_score(target_test, target_pred, beta=2.0, average='binary'))\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "def process_naive_bayes_CNB_with_extra_split(data_tuple):\n",
+    "    data_train, data_validation, data_test, target_train, target_validation, target_test = data_tuple\n",
+    "\n",
+    "    #Create a Bernoulli Classifier\n",
+    "    cnb = ComplementNB()\n",
+    "\n",
+    "    #Train the model using the training sets\n",
+    "    cnb.fit(data_train, target_train.values.ravel())\n",
+    "\n",
+    "    #Predict the response for test dataset\n",
+    "    target_pred = cnb.predict(data_test)\n",
+    "\n",
+    "    # Model Accuracy, how often is the classifier correct?\n",
+    "    print(\"Complement Naive Bayes:\")\n",
+    "    print(\"Accuracy:\",metrics.accuracy_score(target_test, target_pred))\n",
+    "    print(\"F2-Score:\",metrics.fbeta_score(target_test, target_pred, beta=2.0, average='binary'))\n",
     "    print(\"\\n\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -166,15 +175,12 @@
     "# One-Hot Encoded"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -212,10 +218,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -224,38 +227,35 @@
     "### Oversampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.5384232777915942\n",
-      "F2-Score: 0.5463399412025555\n",
+      "Accuracy: 0.5386897360287064\n",
+      "F2-Score: 0.5458325116676528\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.7325469854691441\n",
-      "F2-Score: 0.5855253536134384\n",
+      "Accuracy: 0.7326713326464632\n",
+      "F2-Score: 0.5852108849224595\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.7265960848403027\n",
-      "F2-Score: 0.5885149660988921\n",
+      "Accuracy: 0.7263651543681388\n",
+      "F2-Score: 0.5876454900663621\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.7325469854691441\n",
-      "F2-Score: 0.5855253536134384\n",
+      "Accuracy: 0.7326713326464632\n",
+      "F2-Score: 0.5852108849224595\n",
       "\n",
       "\n"
      ]
@@ -267,10 +267,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -279,38 +276,35 @@
     "### Undersampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.7043379401001882\n",
-      "F2-Score: 0.5766793409378961\n",
+      "Accuracy: 0.7040359540981277\n",
+      "F2-Score: 0.5772555484078482\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.7453014530855864\n",
-      "F2-Score: 0.5923385641178094\n",
+      "Accuracy: 0.7458698973247593\n",
+      "F2-Score: 0.5927413357132232\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.7475397022773297\n",
-      "F2-Score: 0.5887188027071457\n",
+      "Accuracy: 0.7476818133371229\n",
+      "F2-Score: 0.5877577181925008\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.7453014530855864\n",
-      "F2-Score: 0.5923385641178094\n",
+      "Accuracy: 0.7458698973247593\n",
+      "F2-Score: 0.5927413357132232\n",
       "\n",
       "\n"
      ]
@@ -322,10 +316,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -334,15 +325,12 @@
     "## All Columns"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -377,10 +365,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -389,38 +374,35 @@
     "### Oversampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.5145486197463317\n",
-      "F2-Score: 0.5371900826446281\n",
+      "Accuracy: 0.5163427718762212\n",
+      "F2-Score: 0.5372419116228211\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.7454258002629055\n",
-      "F2-Score: 0.5936412259105187\n",
+      "Accuracy: 0.7459231889721818\n",
+      "F2-Score: 0.5931843290558341\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.7473798273350624\n",
-      "F2-Score: 0.5882792485055508\n",
+      "Accuracy: 0.7480015632216577\n",
+      "F2-Score: 0.5887191539365452\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.7454258002629055\n",
-      "F2-Score: 0.5936412259105187\n",
+      "Accuracy: 0.7459231889721818\n",
+      "F2-Score: 0.5931843290558341\n",
       "\n",
       "\n"
      ]
@@ -433,10 +415,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -445,38 +424,35 @@
     "### Undersampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.7042313568053433\n",
-      "F2-Score: 0.577769736445329\n",
+      "Accuracy: 0.5508224677585533\n",
+      "F2-Score: 0.5489154861585072\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.7461541194443457\n",
-      "F2-Score: 0.5925374720952482\n",
+      "Accuracy: 0.7457988417948627\n",
+      "F2-Score: 0.5932581405722297\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.7477173411020712\n",
-      "F2-Score: 0.5875376626706841\n",
+      "Accuracy: 0.7476640494546488\n",
+      "F2-Score: 0.5886435465960537\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.7461541194443457\n",
-      "F2-Score: 0.5925374720952482\n",
+      "Accuracy: 0.7457988417948627\n",
+      "F2-Score: 0.5932581405722297\n",
       "\n",
       "\n"
      ]
@@ -489,10 +465,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -501,15 +474,12 @@
     "# Label Encoding"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -544,10 +514,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -556,38 +523,35 @@
     "### Oversampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.7851458414751128\n",
-      "F2-Score: 0.5136307895481559\n",
+      "Accuracy: 0.7840622446441894\n",
+      "F2-Score: 0.5155099833023682\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.7224393363413507\n",
-      "F2-Score: 0.5737942454978265\n",
+      "Accuracy: 0.7224215724588766\n",
+      "F2-Score: 0.5739418400082791\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.6728603403559882\n",
-      "F2-Score: 0.39631132888898246\n",
+      "Accuracy: 0.6728781042384624\n",
+      "F2-Score: 0.3963196635120925\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.7224393363413507\n",
-      "F2-Score: 0.5737942454978265\n",
+      "Accuracy: 0.7224215724588766\n",
+      "F2-Score: 0.5739418400082791\n",
       "\n",
       "\n"
      ]
@@ -599,10 +563,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -611,38 +572,35 @@
     "### Undersampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gaussian Naive Bayes:\n",
-      "Accuracy: 0.7867090631328383\n",
-      "F2-Score: 0.5142296600954948\n",
+      "Accuracy: 0.784595161118414\n",
+      "F2-Score: 0.5163407919813651\n",
       "\n",
       "\n",
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.72235051692898\n",
-      "F2-Score: 0.5741334712881532\n",
+      "Accuracy: 0.722688030695989\n",
+      "F2-Score: 0.5734818987656366\n",
       "\n",
       "\n",
       "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.6737840622446442\n",
-      "F2-Score: 0.39630230158563035\n",
+      "Accuracy: 0.6425018652076598\n",
+      "F2-Score: 0.4102219907036384\n",
       "\n",
       "\n",
       "Complement Naive Bayes:\n",
-      "Accuracy: 0.72235051692898\n",
-      "F2-Score: 0.5741334712881532\n",
+      "Accuracy: 0.722688030695989\n",
+      "F2-Score: 0.5734818987656366\n",
       "\n",
       "\n"
      ]
@@ -654,10 +612,7 @@
     "process_all_naive_bayes_classifiers((data_train, data_test, target_train, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -666,96 +621,87 @@
     "# Evaluating Best Performing Model from Train/Validation Split with Train/Validation/Test Split"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## One-hot Encoding"
+    "## One-hot Encoding - All Columns Undersampled"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.8424904520827782\n",
-      "F2-Score: 0.451366472993329\n",
+      "Accuracy: 0.7467625899280576\n",
+      "F2-Score: 0.5887370194255497\n",
+      "\n",
+      "\n",
+      "Complement Naive Bayes:\n",
+      "Accuracy: 0.7467625899280576\n",
+      "F2-Score: 0.5887370194255497\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split(False, True)\n",
-    "\n",
-    "process_naive_bayes_MNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Label Encoding"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multinominal Naive Bayes:\n",
-      "Accuracy: 0.86005861977085\n",
-      "F2-Score: 0.23819024525000768\n",
-      "\n",
-      "\n",
-      "Bernoulli Naive Bayes:\n",
-      "Accuracy: 0.8721200817124078\n",
-      "F2-Score: 0.0\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_label_encoded_train_test_split(True)\n",
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled(False, True)\n",
     "\n",
     "process_naive_bayes_MNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))\n",
-    "process_naive_bayes_BNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))"
+    "process_naive_bayes_CNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## One Hot Encoding - All Columns Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multinominal Naive Bayes:\n",
+      "Accuracy: 0.7468869348965272\n",
+      "F2-Score: 0.5884987841815623\n",
+      "\n",
+      "\n",
+      "Complement Naive Bayes:\n",
+      "Accuracy: 0.7468869348965272\n",
+      "F2-Score: 0.5884987841815623\n",
+      "\n",
+      "\n"
+     ]
     }
+   ],
+   "source": [
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled(False, True)\n",
+    "\n",
+    "process_naive_bayes_MNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))\n",
+    "process_naive_bayes_CNB_with_extra_split((data_train, data_validation, data_test, target_train, target_validation, target_test))"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -764,10 +710,7 @@
     "# Extras"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -793,7 +736,6 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    }
