--- a/jupyter_notebooks/nearest_centroid.ipynb
+++ b/jupyter_notebooks/nearest_centroid.ipynb
@@ -3,14 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# K-nearest centroids\n",
-    "In this notebook we want to train a K-nearest-centroid classifier that should predict whether a patient has diabetes or not."
+    "# Nearest Centroids\n",
+    "In this notebook we want to train a Nearest Centroid classifier that should predict whether a patient has diabetes or not."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -47,10 +44,7 @@
     "f2_list = []"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -82,10 +76,7 @@
     "| One Hot Encoding (2) <br>+<br>Undersampling | One hot encoding for all columns including yes/no and undersampling |"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -97,10 +88,7 @@
     "metrics = ('euclidean', 'cosine', 'manhattan', 'jaccard')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -109,10 +97,7 @@
     "The below defined function is used to store all the accuracy and F2-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F2-Score to see the performance directly under each method.\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -132,26 +117,20 @@
     "    return \"{}:\\n acc = {}\\n f2-score = {}\".format(approach, acc, f2)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We start with applying a K-nearest centroid classifier to the train data and test against the validation data on how it performs by using the accuracy and F2 score.\n",
+    "We start with applying a Nearest Centroid classifier to the train data and test against the validation data on how it performs by using the accuracy and F2 score.\n",
     "\n",
     "We will do so for each combination that is listed above by using a for loop. The following estimators are structured by the different style of preprocessing.\n",
     "\n",
     "At the end we test the best approach against the actual test data."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -160,10 +139,7 @@
     "# Label Encoding"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -202,10 +178,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -214,10 +187,7 @@
     "# Label Encoding + Oversampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -256,10 +226,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -268,10 +235,7 @@
     "# Label Encoding + Undersampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -310,10 +274,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -323,10 +284,7 @@
     "yes/no values not one hot encoded"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -365,10 +323,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -378,10 +333,7 @@
     "all columns one hot encoded"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -420,10 +372,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -432,10 +381,7 @@
     "# One Hot Encoding (1) + Oversampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -474,10 +420,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -486,10 +429,7 @@
     "# One Hot Encoding (2) + Oversampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -528,10 +468,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -540,10 +477,7 @@
     "# One Hot Encoding (1) + Undersampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -582,10 +516,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -594,10 +525,7 @@
     "# One Hot Encoding (2) + Undersampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -636,10 +564,7 @@
     "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -649,10 +574,7 @@
     "We use the following loop to print all F2- and accuracy-scores and thereby also analyze which approach performed best."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -838,10 +760,7 @@
     "print(\"Best Approach regarding Accuracy:\\nNr.{}) {} with acc = {}\".format(highest_acc[1], highest_acc[2], highest_acc[0]))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
